fixed some spacing things

--- a/style/core.css
+++ b/style/core.css
@@ -136,7 +136,7 @@ a {
 .horizontal-stack {
   display: flex;
   flex-direction: row;
-  align-items: flex-start;
+  align-items: stretch;
   
 }
 
